--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,7 +7,7 @@ $desktop-width: 1023px;
 /*         Основные цвета        */
 
 $black-light-color: #666666;
-$black-color: #203C42;
+$black-color: #203c42;
 $blue-light-color: #00b2ff;
 
 /*         Основные шрифты        */
