--- a/source/sass/blocks/headline-section.scss
+++ b/source/sass/blocks/headline-section.scss
@@ -61,7 +61,16 @@
   font-weight: bold;
   letter-spacing: 0.05em;
 
-  border: none;
+  border-color: $blue-light-color;
+
+  &:hover,
+  &:focus {
+    opacity: 0.9;
+  }
+
+  &:active {
+    opacity: 0.7;
+  }
 }
 
 .headline-section__anchor-span {
@@ -80,10 +89,20 @@
 
   font-size: 14px;
   line-height: 16px;
-  color: #FFFFFF;
+  color: #ffffff;
 
   opacity: 0.5;
   transform: rotate(-90deg);
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+    text-shadow: 0 0 15px $blue-light-color;
+  }
+
+  &:active {
+    opacity: 1;
+  }
 }
 
 /* ----------------- Разметкdа под tablet ----------------- */
