--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,90 +1,90 @@
 /* roboto-condensed-300 - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/roboto-condensed-v18-latin-300.eot');
-  src: local('Roboto Condensed Light'),
-    local('RobotoCondensed-Light'),
-    url('../fonts/RobotoCondensed-Regular.woff') format('woff');
+  src: url("../fonts/roboto-condensed-v18-latin-300.eot");
+  src: local("Roboto Condensed Light"),
+    local("RobotoCondensed-Light"),
+    url("../fonts/RobotoCondensed-Regular.woff") format("woff");
 }
 
 /* roboto-condensed-300italic - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: italic;
   font-weight: 300;
-  src: url('../fonts/roboto-condensed-v18-latin-300italic.eot');
-  src: local('Roboto Condensed Light Italic'),
-    local('RobotoCondensed-LightItalic'),
-    url('../fonts/roboto-condensed-v18-latin-300italic.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v18-latin-300italic.woff') format('woff'),
+  src: url("../fonts/roboto-condensed-v18-latin-300italic.eot");
+  src: local("Roboto Condensed Light Italic"),
+    local("RobotoCondensed-LightItalic"),
+    url("../fonts/roboto-condensed-v18-latin-300italic.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v18-latin-300italic.woff") format("woff");
 }
 
 /* roboto-condensed-regular - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-condensed-v18-latin-regular.eot');
-  src: local('Roboto Condensed'),
-    local('RobotoCondensed-Regular'),
-    url('../fonts/RobotoCondensed-Regular.woff') format('woff');
+  src: url("../fonts/roboto-condensed-v18-latin-regular.eot");
+  src: local("Roboto Condensed"),
+    local("RobotoCondensed-Regular"),
+    url("../fonts/RobotoCondensed-Regular.woff") format("woff");
 }
 
 /* roboto-condensed-italic - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/roboto-condensed-v18-latin-italic.eot');
-  src: local('Roboto Condensed Italic'),
-    local('RobotoCondensed-Italic'),
-    url('../fonts/roboto-condensed-v18-latin-italic.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-condensed-v18-latin-italic.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v18-latin-italic.woff') format('woff');
+  src: url("../fonts/roboto-condensed-v18-latin-italic.eot");
+  src: local("Roboto Condensed Italic"),
+    local("RobotoCondensed-Italic"),
+    url("../fonts/roboto-condensed-v18-latin-italic.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/roboto-condensed-v18-latin-italic.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v18-latin-italic.woff") format("woff");
 }
 
 /* roboto-condensed-700italic - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: italic;
   font-weight: 700;
-  src: url('../fonts/roboto-condensed-v18-latin-700italic.eot');
-  src: local('Roboto Condensed Bold Italic'),
-    local('RobotoCondensed-BoldItalic'),
-    url('../fonts/RobotoCondensed-BoldItalic.woff') format('woff');
+  src: url("../fonts/roboto-condensed-v18-latin-700italic.eot");
+  src: local("Roboto Condensed Bold Italic"),
+    local("RobotoCondensed-BoldItalic"),
+    url("../fonts/RobotoCondensed-BoldItalic.woff") format("woff");
 }
 
 /* roboto-condensed-700 - latin */
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/roboto-condensed-v18-latin-700.eot');
-  src: local('Roboto Condensed Bold'),
-    local('RobotoCondensed-Bold'),
-    url('../fonts/RobotoCondensed-Bold.woff') format('woff');
+  src: url("../fonts/roboto-condensed-v18-latin-700.eot");
+  src: local("Roboto Condensed Bold"),
+    local("RobotoCondensed-Bold"),
+    url("../fonts/RobotoCondensed-Bold.woff") format("woff");
 }
 
 /* pt-mono-regular - latin_cyrillic-ext_cyrillic */
 
 @font-face {
-  font-family: 'PT Mono';
+  font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.eot');
-  src: local('PT Mono'),
-    local('PTMono-Regular'),
-    url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
-    url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.woff') format('woff'),
-    url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.ttf') format('truetype'),
-    url('../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.svg#PTMono') format('svg');
+  src: url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.eot");
+  src: local("PT Mono"),
+    local("PTMono-Regular"),
+    url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.woff") format("woff"),
+    url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.ttf") format("truetype"),
+    url("../fonts/pt-mono-v7-latin_cyrillic-ext_cyrillic-regular.svg#PTMono") format("svg");
 }
