--- a/source/sass/blocks/popup-call.scss
+++ b/source/sass/blocks/popup-call.scss
@@ -1,5 +1,9 @@
 /* ----------------- Разметкdа под desktop ----------------- */
 
+.popup-call {
+
+}
+
 .popup-call__container {
   position: fixed;
   top: 50%;
