--- a/source/sass/blocks/headline-section.scss
+++ b/source/sass/blocks/headline-section.scss
@@ -65,11 +65,11 @@
 
   &:hover,
   &:focus {
-    opacity: 0.9;
+    background-color: rgba(0, 178, 255, 0.7);
   }
 
   &:active {
-    opacity: 0.7;
+    background-color: rgba(0, 178, 255, 0.4);
   }
 }
 
