--- a/source/sass/blocks/popup-call.scss
+++ b/source/sass/blocks/popup-call.scss
@@ -1,7 +1,11 @@
 /* ----------------- Разметкdа под desktop ----------------- */
 
 .popup-call {
+  display: none;
 
+  &--active {
+    display: block;
+  }
 }
 
 .popup-call__container {
