--- a/source/sass/blocks/headband-container.scss
+++ b/source/sass/blocks/headband-container.scss
@@ -3,15 +3,23 @@
 .headband-container {
   padding-top: 32px;
   padding-bottom: 143px;
-  background-color: $black-color;
 
   background-image: url("../img/desktop-header-background.png");
+  background-color: $black-color;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 
   @media (min-resolution: $retina-dppx) {
     background-image: url("../img/desktop-header-background(x2).png");
+  }
+
+  &--webp {
+    background-image: url("../img/desktop-header-background.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/desktop-header-background(x2).webp");
+    }
   }
 }
 
@@ -26,6 +34,14 @@
 
     @media (min-resolution: $retina-dppx) {
       background-image: url("../img/tablet-header-background(x2).png");
+    }
+
+    &--webp {
+      background-image: url("../img/tablet-header-background.webp");
+
+      @media (min-resolution: $retina-dppx) {
+        background-image: url("../img/tablet-header-background(x2).webp");
+      }
     }
   }
 }
@@ -45,6 +61,14 @@
       background-image: url("../img/mobile-header-background(x2).png");
       background-size: 450%;
       background-position: 55.5% 100%;
+    }
+
+    &--webp {
+      background-image: url("../img/mobile-header-background.webp");
+
+      @media (min-resolution: $retina-dppx) {
+        background-image: url("../img/mobile-header-background(x2).webp");
+      }
     }
   }
 }
