--- a/source/sass/blocks/services-section.scss
+++ b/source/sass/blocks/services-section.scss
@@ -1,8 +1,13 @@
 /* ----------------- Разметкdа под desktop ----------------- */
 
+.services-section {
+  padding: 0;
+}
+
 .services-section > h2 {
   margin: 0;
-  margin-bottom: 52px;
+  margin-bottom: 22px;
+  margin-left: 85px;
   padding: 0;
 
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -26,6 +31,9 @@
 
 .services-section__list {
   display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: wrap;
   margin: 0;
 
   padding: 0;
@@ -36,12 +44,13 @@
 .services-section__item {
   position: relative;
 
-  width: 33.3%;
+  width: 30%;
   max-width: 370px;
   min-height: 620px;
   margin-right: 30px;
+  margin-top: 30px;
 
-  &:last-child {
+  &:nth-child(3n) {
     margin-right: 0;
   }
 }
@@ -146,6 +155,30 @@
   }
 }
 
+.services-section__link--production.services-section__link--webp {
+  background-image: url("../img/service-1-desktop.webp");
+
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/service-1-desktop(x2).webp");
+  }
+}
+
+.services-section__link--mounting.services-section__link--webp {
+  background-image: url("../img/service-2-desktop.webp");
+
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/service-2-desktop(x2).webp");
+  }
+}
+
+.services-section__link--components.services-section__link--webp {
+  background-image: url("../img/service-3-desktop.webp");
+
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/service-3-desktop(x2).webp");
+  }
+}
+
 .services-section__link-description {
   position: relative;
 
@@ -214,6 +247,30 @@
       }
     }
   }
+
+  .services-section__link--production.services-section__link--webp {
+    background-image: url("../img/service-1-tablet.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-1-tablet(x2).webp");
+    }
+  }
+
+  .services-section__link--mounting.services-section__link--webp {
+    background-image: url("../img/service-2-tablet.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-2-tablet(x2).webp");
+    }
+  }
+
+  .services-section__link--components.services-section__link--webp {
+    background-image: url("../img/service-3-tablet.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-3-tablet(x2).webp");
+    }
+  }
 }
 
 /* ----------------- Разметкdа под mobile ----------------- */
@@ -264,6 +321,30 @@
       @media (min-resolution: $retina-dppx) {
         background-image: url("../img/service-3-mobile(x2).png");
       }
+    }
+  }
+
+  .services-section__link--production.services-section__link--webp {
+    background-image: url("../img/service-1-mobile.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-1-mobile(x2).webp");
+    }
+  }
+
+  .services-section__link--mounting.services-section__link--webp {
+    background-image: url("../img/service-2-mobile.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-2-mobile(x2).webp");
+    }
+  }
+
+  .services-section__link--components.services-section__link--webp {
+    background-image: url("../img/service-3-mobile.webp");
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/service-3-mobile(x2).webp");
     }
   }
 }
