--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,4 +1,6 @@
 html {
+  height: 100%;
+
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -10,7 +12,12 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   width: auto;
+  height: 100%;
   min-width: $mobile-width;
   max-width: 100%;
   margin: 0 auto;
