--- a/source/sass/blocks/popup-call.scss
+++ b/source/sass/blocks/popup-call.scss
@@ -19,6 +19,8 @@
 
   background-color: $blue-light-color;
   transform: translate(-50%, -50%);
+
+  z-index: 2;
 }
 
 .popup-call__close-button {
@@ -204,7 +206,7 @@
 .popup-call__checkbox {
   position: absolute;
   bottom: 19px;
-  right: 45%;
+  right: 94.5%;
 
   &:checked ~ .popup-call__label {
     &::after {
