--- a/source/sass/blocks/services-section.scss
+++ b/source/sass/blocks/services-section.scss
@@ -93,7 +93,7 @@
     background-image: url("../img/icon-vector.svg");
     background-color: $blue-light-color;
     background-position: center;
-    background-size: 4px 8px;
+    background-size: 8px 16px;
     background-repeat: no-repeat;
   }
 
@@ -113,7 +113,7 @@
 
   &:hover::after,
   &:focus::after {
-    background-size: 8px 16px;
+    background-size: 12px 20px;
   }
 
   &:hover::before,
@@ -192,8 +192,13 @@
 /* ----------------- Разметкdа под tablet ----------------- */
 
 @media (max-width: $desktop-width) {
+  .services-section {
+    padding: 0 24px;
+  }
+
   .services-section > h2 {
     width: 85%;
+    margin: 0;
     margin-bottom: 46px;
 
     font-size: 32px;
@@ -276,10 +281,15 @@
 /* ----------------- Разметкdа под mobile ----------------- */
 
 @media (max-width: $tablet-width) {
+  .services-section {
+    padding: 0 15px;
+  }
+
   .services-section > h2 {
     width: 100%;
+    margin: 0;
     margin-bottom: 40px;
-    padding-left: 12px;
+    padding-left: 10px;
 
     font-size: 28px;
     line-height: 40px;
