--- a/source/sass/blocks/headband-container.scss
+++ b/source/sass/blocks/headband-container.scss
@@ -1,6 +1,7 @@
 /* ----------------- Разметкdа под desktop ----------------- */
 
 .headband-container {
+  width: 100%;
   padding-top: 32px;
   padding-bottom: 143px;
 
