--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -12,11 +12,14 @@ html {
 }
 
 body {
-  width: auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
   height: 100%;
   min-width: $mobile-width;
   max-width: 100%;
   margin: 0 auto;
+  margin-top: auto;
   padding: 0;
 
   font-family: "PT Mono", "Arial", sans-serif;
@@ -27,6 +30,29 @@ body {
 
   overflow-x: hidden;
   background-color: #ffffff;
+}
+
+.body-page {
+  &--blocked {
+    position: fixed;
+    width: 100%;
+
+    overflow: hidden;
+    overflow-y: scroll;
+
+    &::after {
+      content: "";
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+
+      background-color: #1b2d37;
+      opacity: 0.9;
+    }
+  }
 }
 
 a {
