--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -13,6 +13,7 @@
   text-transform: none;
   font-weight: 500;
   border: 2px solid transparent;
+  border-radius: 0;
   outline: none;
   transition: 0.25s ease all;
   background-color: rgba(255, 255, 255, 0.1);
